[package]
name = "hex2ascii"
version = "1.0.1"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
description = "command line app that converts hex values into ascii"
homepage = "https://github.com/gavynriebau/hex2ascii"
repository = "https://github.com/gavynriebau/hex2ascii"
keywords = ["hex", "hexadecimal", "ascii", "convert", "cli"]
categories = ["command-line-utilities", "encoding", "text-processing"]
license = "MIT"

[dependencies]
clap = "2.21.2"
hex = "0.2.0"
